# rug_ai_task

./: .env  .gitignore  Cargo.toml  README.md  run.sh  run_task4.sh  run_task5.sh
src/: main.rs  task4.rs  task5.rs
src/lib/: README.md  spacy.rs
src/task1/: mod.rs
src/task2/: mod.rs
src/task3/: mod.rs
src/tools/: mod.rs
